--- a/docs/styles/home.css
+++ b/docs/styles/home.css
@@ -11926,6 +11926,7 @@ a {
   display: inline-block;
   margin-bottom: 3rem;
   font-weight: 700;
+  font-size: 1.4rem;
 }
 .section-tag.light {
   background-color: rgba(255, 255, 255, 0.2);
@@ -11952,7 +11953,7 @@ a {
 }
 
 .announcement-bar {
-  background-color: #4169e1;
+  background-color: rgb(49, 130, 206);
   color: #fff;
   position: relative;
   padding-top: 0.5rem;
@@ -11964,6 +11965,7 @@ a {
 }
 .announcement-bar:hover span {
   color: #420f00;
+  color: #1d4e7c;
 }
 .announcement-bar p {
   margin-bottom: 0;
@@ -11989,6 +11991,10 @@ a {
   font-family: "Rubik", sans-serif;
   font-weight: 600;
 }
+.btn.btn-small {
+  padding: 0.5rem 1rem;
+  font-size: 1.4rem;
+}
 @media (min-width: 992px) {
   .btn {
     font-size: 2rem;
@@ -12007,6 +12013,14 @@ a {
 }
 .btn.btn-secondary:hover, .btn.btn-secondary:focus, .btn.btn-secondary:active {
   background-color: #1e2129 !important;
+}
+.btn.btn-dark {
+  background-color: #1e2129;
+  border: none;
+  color: #fff;
+}
+.btn.btn-dark:hover, .btn.btn-dark:focus, .btn.btn-dark:active {
+  background-color: #00c0f3;
 }
 .btn a {
   color: #fff;
@@ -12036,6 +12050,7 @@ section.hero {
   align-items: center;
   overflow: hidden;
   position: relative;
+  padding-top: 0;
 }
 section.hero .section-content {
   display: flex;
@@ -12074,22 +12089,27 @@ section.hero .section-content .message h1 span, section.hero .section-content .m
   section.hero .section-content .message h1, section.hero .section-content .message .h1 {
     font-size: 5rem;
   }
-  section.hero .section-content .message h1 br, section.hero .section-content .message .h1 br {
-    display: none;
-  }
 }
 @media (min-width: 992px) {
   section.hero .section-content .message h1, section.hero .section-content .message .h1 {
     font-size: 5.5rem;
+  }
+}
+@media (min-width: 1200px) {
+  section.hero .section-content .message h1, section.hero .section-content .message .h1 {
+    font-size: 6rem;
   }
   section.hero .section-content .message h1 br, section.hero .section-content .message .h1 br {
     display: block;
   }
 }
 section.hero .section-content .message h2, section.hero .section-content .message .h2 {
-  font-size: 2rem;
-  font-weight: 300;
+  font-size: 1.8rem;
+  font-weight: 500;
   line-height: 1.6;
+  color: #3B3B3B;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 section.hero .section-content .message h2 strong, section.hero .section-content .message .h2 strong {
   font-weight: 600;
@@ -12102,12 +12122,19 @@ section.hero .section-content .message h3, section.hero .section-content .messag
   font-weight: 800;
   font-size: 2.6rem;
 }
+section.hero .section-content .message a.btn {
+  margin: 2rem 1rem;
+  border-radius: 1rem;
+  letter-spacing: 1px;
+  font-size: 1.7rem;
+}
 section.hero .section-content .featured-image {
   width: 100%;
   height: 100%;
 }
 section.hero .section-content .featured-image .featured-image-holder {
   box-shadow: 0 0 27px -15px #3B3B3B;
+  box-shadow: 0 0 50px -35px #751b00;
   border-radius: 1rem;
   overflow: hidden;
 }
@@ -12351,7 +12378,13 @@ section.benefits .section-content .benefits-holder {
   padding: 4rem 0 8rem 0;
   border-bottom: solid #fff 1px;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
+  section.benefits .section-content .benefits-holder {
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 2rem;
+  }
+}
+@media (min-width: 1400px) {
   section.benefits .section-content .benefits-holder {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 2rem;
@@ -12399,7 +12432,7 @@ section.roles .section-content {
 section.roles .section-content .roles-content {
   display: grid;
   grid-template-columns: 1fr;
-  grid-row-gap: 6rem;
+  grid-row-gap: 4rem;
 }
 @media (min-width: 992px) {
   section.roles .section-content .roles-content {
@@ -12407,13 +12440,16 @@ section.roles .section-content .roles-content {
     grid-template-columns: 30% 60%;
   }
 }
+section.roles .section-content .roles-content .roles-details h2 span, section.roles .section-content .roles-content .roles-details .h2 span {
+  color: #ff6e42;
+}
 section.roles .section-content .roles-content .roles-holder {
   display: grid;
   grid-template-columns: 1fr;
   grid-row-gap: 5rem;
   grid-column-gap: 2rem;
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   section.roles .section-content .roles-content .roles-holder {
     grid-template-columns: 1fr 1fr;
   }
@@ -12433,10 +12469,12 @@ section.roles .section-content .roles-content .roles-holder .role .role-header h
   text-transform: uppercase;
 }
 section.roles .section-content .roles-content .roles-holder .role .role-body {
-  padding: 2rem;
+  padding: 2rem 2rem 2rem 2rem;
 }
 section.roles .section-content .roles-content .roles-holder .role .role-body ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 section.roles .section-content .roles-content .roles-holder .role .role-body ul li {
   margin-bottom: 1.5rem;
@@ -12507,38 +12545,59 @@ section.concept-highlights h2 span, section.concept-highlights .h2 span {
   color: #ff6e42;
 }
 
-section.cta {
-  background-color: #3B3B3B;
-  padding: 3rem 2rem;
+section.cta .section-content {
+  display: flex;
+  flex-direction: column-reverse;
+  padding: 2rem;
+  border-radius: 2rem;
+  border: solid #adb5bd 1px;
+}
+@media (min-width: 768px) {
+  section.cta .section-content {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
 }
 @media (min-width: 992px) {
-  section.cta {
-    padding: 5rem 2rem;
+  section.cta .section-content {
+    grid-template-columns: 1fr 1fr;
+    padding: 2rem 4rem;
   }
 }
-@media (min-width: 1200px) {
-  section.cta {
-    padding: 6rem 0;
-  }
+section.cta .section-content .mailinglist-form, section.cta .section-content .mailinglist-image {
+  display: flex;
+  flex-direction: column;
+  border-radius: 2rem;
 }
-section.cta h2, section.cta .h2 {
-  color: #fff;
-  font-size: 2.8rem;
-  font-weight: 400;
+section.cta .section-content .mailinglist-form h2, section.cta .section-content .mailinglist-form .h2 {
+  font-size: 2.4rem;
   line-height: 1.3;
   margin-bottom: 0;
   padding: 3rem 0;
 }
-@media (min-width: 992px) {
-  section.cta h2, section.cta .h2 {
-    font-size: 3rem;
-    padding: 3rem 4rem 3rem 0;
-  }
+section.cta .section-content .mailinglist-form h3, section.cta .section-content .mailinglist-form .h3 {
+  font-size: 1.8rem;
+  font-weight: normal;
 }
-section.cta h3, section.cta .h3 {
-  font-weight: 300;
-  color: #fff;
-  font-size: 2.4rem;
+section.cta .section-content .mailinglist-form input {
+  height: 4rem;
+}
+section.cta .section-content .mailinglist-form .btn {
+  height: 4rem;
+  padding: 1rem;
+  font-size: 1.5rem;
+}
+section.cta .section-content .mailinglist-image {
+  background-color: rgba(255, 110, 66, 0.1);
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  padding: 3rem;
+}
+section.cta .section-content .mailinglist-image img {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
 }
 section.cta .form-holder {
   padding-top: 4rem;
@@ -12583,6 +12642,7 @@ section.features .feature:last-of-type {
   section.features .feature {
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
   }
 }
 @media (min-width: 992px) {
@@ -12870,6 +12930,108 @@ section.testimonials .testimonials-holders {
   }
 }
 
+.testimonial-single {
+  display: flex;
+  flex-direction: column;
+}
+.testimonial-single .testimonial-body {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  flex-grow: 1;
+}
+@media (min-width: 768px) {
+  .testimonial-single .testimonial-body {
+    flex-direction: row;
+  }
+}
+.testimonial-single .testimonial-body i.quote-icon {
+  color: #ff6e42;
+  display: block;
+  position: absolute;
+  font-size: 16rem;
+  display: block;
+  top: -3rem;
+  line-height: 1;
+  position: absolute;
+  opacity: 0.2;
+  left: -5rem;
+  line-height: 1;
+}
+@media (min-width: 768px) {
+  .testimonial-single .testimonial-body i.quote-icon {
+    font-size: 10rem;
+    position: relative;
+    opacity: 1;
+    top: 0;
+    left: 0;
+  }
+}
+.testimonial-single .testimonial-body p.testimonial-text {
+  font-size: 2rem;
+  font-family: "Lora", sans-serif;
+  font-style: italic;
+  padding-left: 2rem;
+  padding-top: 4rem;
+  margin-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  .testimonial-single .testimonial-body p.testimonial-text {
+    padding-top: 4rem;
+    font-size: 2.2rem;
+    padding-left: 0;
+  }
+}
+.testimonial-single .testimonial-meta {
+  display: flex;
+  justify-content: center;
+}
+@media (min-width: 768px) {
+  .testimonial-single .testimonial-meta {
+    justify-content: flex-end;
+  }
+}
+.testimonial-single .testimonial-meta .testimonial-meta-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  align-content: center;
+  text-align: right;
+}
+@media (min-width: 768px) {
+  .testimonial-single .testimonial-meta .testimonial-meta-content {
+    flex-direction: row-reverse;
+    align-items: center;
+    align-content: center;
+    text-align: right;
+  }
+}
+.testimonial-single .testimonial-meta .testimonial-meta-content img {
+  width: 7rem;
+  height: 7rem;
+  border-radius: 100%;
+  box-shadow: 0 0 30px -20px rgba(0, 0, 0, 0.4);
+  margin-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  .testimonial-single .testimonial-meta .testimonial-meta-content img {
+    margin-bottom: 0;
+    margin-left: 2rem;
+  }
+}
+.testimonial-single .testimonial-meta .testimonial-meta-content h4, .testimonial-single .testimonial-meta .testimonial-meta-content .h4 {
+  font-size: 1.8rem;
+  margin: 0;
+}
+.testimonial-single .testimonial-meta .testimonial-meta-content h5, .testimonial-single .testimonial-meta .testimonial-meta-content .h5 {
+  font-size: 1.6rem;
+  margin: 0;
+  width: 300px;
+}
+.testimonial-single .testimonial-meta .testimonial-meta-content h5 span, .testimonial-single .testimonial-meta .testimonial-meta-content .h5 span {
+  font-weight: normal;
+}
 .cloud-form {
   background-color: #ff6e42;
   padding: 3rem 0;
@@ -12957,62 +13119,137 @@ section.testimonials .testimonials-holders {
   background-color: #ff470f;
 }
 
-section.cal-book {
-  background-color: #1f1f1f;
-}
-section.cal-book .section-header {
+section.cal-book .section-content {
   color: #fff;
-  text-transform: initial;
+  background-color: #1f1f1f;
+  border-radius: 2rem;
+  padding: 3rem;
 }
-section.cal-book .section-header span {
-  text-transform: lowercase;
+@media (min-width: 992px) {
+  section.cal-book .section-content {
+    padding: 4rem 6rem;
+  }
+}
+section.cal-book .section-content .section-header {
+  text-align: left;
+}
+section.cal-book .section-content .section-header .section-tag {
+  background-color: rgba(255, 110, 66, 0.2);
+}
+section.cal-book .section-content .section-header p {
+  max-width: 35%;
 }
 
-section.footer {
-  background-color: #222222;
-  background-color: #ff6e42;
-  color: #fff;
-}
-section.footer .footer-holder {
+section.footer .section-content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  align-content: center;
 }
-section.footer .footer-holder .brand {
+section.footer .section-content .footer-brand {
+  width: 50%;
+}
+@media (min-width: 768px) {
+  section.footer .section-content .footer-brand {
+    width: auto;
+  }
+}
+section.footer .section-content .footer-brand .brand {
   display: flex;
   flex-direction: row;
-  align-content: center;
-  justify-content: center;
   align-items: center;
   text-decoration: none;
-  margin-right: 1rem;
 }
-section.footer .footer-holder .brand .logo {
-  margin-right: 1rem;
+section.footer .section-content .footer-brand .brand .logo {
+  margin-right: 1.2rem;
   display: flex;
-  justify-content: center;
   align-items: center;
-  align-content: center;
-  width: 35px;
+  margin-bottom: 2rem;
+  width: 40px;
 }
-section.footer .footer-holder .brand .logo img {
+@media (min-width: 992px) {
+  section.footer .section-content .footer-brand .brand .logo {
+    width: 80px;
+  }
+}
+section.footer .section-content .footer-brand .brand .logo img {
   width: 100%;
-  max-width: 50px;
   height: auto;
 }
-section.footer .footer-holder .brand h1, section.footer .footer-holder .brand .h1 {
+section.footer .section-content .footer-brand .brand h1, section.footer .section-content .footer-brand .brand .h1 {
   margin: 0;
   padding: 0;
-  font-size: 2.6rem;
   text-transform: uppercase;
   font-family: "Montserrat", sans-serif;
-  color: #fff;
+  color: #ff6e42;
   font-weight: 800;
+  font-size: 2.2rem;
 }
-section.footer .footer-holder p.copy {
-  margin-bottom: 0;
+@media (min-width: 992px) {
+  section.footer .section-content .footer-brand .brand h1, section.footer .section-content .footer-brand .brand .h1 {
+    font-size: 4.2rem;
+  }
+}
+section.footer .section-content .footer-brand h2, section.footer .section-content .footer-brand .h2 {
+  max-width: 100%;
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+@media (min-width: 768px) {
+  section.footer .section-content .footer-brand h2, section.footer .section-content .footer-brand .h2 {
+    font-size: 2.4rem;
+    max-width: 60%;
+  }
+}
+section.footer .section-content .footer-links {
+  width: 50%;
+  padding-left: 3rem;
+  padding-top: 2rem;
+}
+@media (min-width: 768px) {
+  section.footer .section-content .footer-links {
+    padding-left: 1rem;
+    padding-right: 2rem;
+    width: 25%;
+    width: auto;
+  }
+}
+@media (min-width: 992px) {
+  section.footer .section-content .footer-links {
+    padding-left: 0;
+  }
+}
+section.footer .section-content .footer-links ul.footer-nav {
+  list-style: none;
+}
+section.footer .section-content .footer-links ul.footer-nav li {
+  font-weight: bold;
+}
+section.footer .section-content .footer-links ul.footer-nav li i {
+  display: inline-block;
+}
+section.footer .section-content .footer-links ul.footer-nav li i:first-of-type {
+  color: #ff6e42;
+}
+section.footer .section-content .footer-links ul.footer-nav li a {
+  display: inline-block;
+}
+section.footer .section-content .footer-links ul.footer-nav li a i {
+  color: inherit;
+}
+section.footer .section-content .footer-links ul.footer-nav li a:hover, section.footer .section-content .footer-links ul.footer-nav li a:focus {
+  color: #ff6e42;
+}
+section.footer .section-content .footer-links h2, section.footer .section-content .footer-links .h2 {
+  font-size: 1.8rem;
+}
+section.footer .copy {
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+section.footer .copy p {
+  color: #adb5bd;
 }
 
 section.news {
@@ -13027,6 +13264,78 @@ section.news {
   section.news .event-details {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+}
+
+section.case-study-home .section-content {
+  background-size: cover;
+  background-position: 60% 50%;
+  border-radius: 2rem;
+  padding: 2rem;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+section.case-study-home .section-content:before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  box-shadow: inset 0 0 5rem -2rem rgba(0, 0, 0, 0.3);
+}
+@media (min-width: 992px) {
+  section.case-study-home .section-content {
+    background-position: 50% 50%;
+  }
+}
+section.case-study-home .section-content .case-study-details {
+  z-index: 999;
+  position: relative;
+  background-color: rgba(49, 130, 206, 0.8);
+  padding: 3rem;
+  border-radius: 2rem;
+  width: 100%;
+  color: #fff;
+  margin-top: 300px;
+  filter: none;
+}
+@media (min-width: 768px) {
+  section.case-study-home .section-content .case-study-details {
+    margin-top: 0;
+    width: 60%;
+  }
+}
+@media (min-width: 992px) {
+  section.case-study-home .section-content .case-study-details {
+    width: 42%;
+    background-color: rgb(49, 130, 206);
+  }
+}
+@media (min-width: 1200px) {
+  section.case-study-home .section-content .case-study-details {
+    width: 36%;
+  }
+}
+section.case-study-home .section-content .case-study-details img {
+  width: 100%;
+  max-width: 80px;
+  height: auto;
+  margin-bottom: 5rem;
+}
+section.case-study-home .section-content .case-study-details h2, section.case-study-home .section-content .case-study-details .h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  text-shadow: 1px 2px 1px #225b90;
+}
+section.case-study-home .section-content .case-study-details p {
+  font-size: 1.6rem;
+  text-shadow: 1px 1px 1px #225b90;
+}
+@media (min-width: 992px) {
+  section.case-study-home .section-content .case-study-details p {
+    text-shadow: none;
   }
 }
 
