--- a/sass/common/global.sass
+++ b/sass/common/global.sass
@@ -52,6 +52,7 @@ a
 	display: inline-block
 	margin-bottom: 3rem
 	font-weight: 700
+	font-size: 1.4rem
 	&.light
 		background-color: rgba(255,255,255,0.2)
 		color: $color-white
@@ -75,7 +76,7 @@ a
 		border: 0
 
 .announcement-bar
-	background-color: $color-blue
+	background-color: rgba(49, 130, 206, 1)
 	color: $color-white
 	position: relative
 	padding-top: 0.5rem
@@ -87,6 +88,7 @@ a
 	&:hover
 		span
 			color: darken($color-brand, 50%)
+			color: darken(rgba(49, 130, 206, 1), 20%)
 
 	p
 		margin-bottom: 0
