--- a/sass/config/variables.sass
+++ b/sass/config/variables.sass
@@ -28,6 +28,7 @@ $color-blue: #3182CE
 $color-off-white: #eeecec
 $color-off-white: #fff8f0
 $color-blue: #4169e1
+$color-blue-dark: #3182CE
 $color-silver: #797aaa
 
 
