--- a/sass/sections/features.sass
+++ b/sass/sections/features.sass
@@ -10,6 +10,7 @@ section.features
 		@include media-breakpoint-up(lg)
 			flex-direction: row
 			justify-content: space-between
+			align-items: center
 
 		&:nth-child(even)
 			@include media-breakpoint-up(lg)
