--- a/sass/sections/testimonials.sass
+++ b/sass/sections/testimonials.sass
@@ -4,6 +4,7 @@ section.testimonials-top
 		grid-template-columns: 1fr
 		grid-row-gap: 2rem
 
+
 		@include media-breakpoint-up(lg)
 			grid-template-columns: 1fr 1fr 1fr
 			grid-column-gap: 2rem
@@ -119,14 +120,6 @@ section.testimonials
 
 
 
-
-
-
-
-
-
-
-
 	.testimonials-holders
 		display: grid
 		grid-template-columns: 1fr
@@ -139,84 +132,84 @@ section.testimonials
 			padding-left: 0
 			padding-right: 0
 
-// .testimonial
-// 	display: flex
-// 	flex-direction: column
-// 	.testimonial-body
-// 		display: flex
-// 		position: relative
-// 		flex-direction: column
-// 		flex-grow: 1
-// 		@include media-breakpoint-up(md)
-// 			flex-direction: row
-// 		i.quote-icon
-// 			color: $color-brand
-// 			display: block
-// 			position: absolute
-// 			font-size: 16rem
-// 			display: block
-// 			top: -3rem
-// 			line-height: 1
-// 			position: absolute
-// 			opacity: 0.2
-// 			left: -5rem
-// 			line-height: 1
-// 			@include media-breakpoint-up(md)
-// 				font-size: 10rem
-// 				position: relative
-// 				opacity: 1
-// 				top: 0
-// 				left: 0
-// 		p.testimonial-text
-// 			font-size: 2rem
-// 			font-family: $font-serif
-// 			font-style: italic
-// 			padding-left: 2rem
-// 			padding-top: 4rem
-// 			margin-bottom: 1rem
-// 			@include media-breakpoint-up(md)
-// 				padding-top: 4rem
-// 				font-size: 2.2rem
-// 				padding-left: 0
-// 	.testimonial-meta
-// 		display: flex
-// 		justify-content: center
-// 		@include media-breakpoint-up(md)
-// 			justify-content: flex-end
-// 		.testimonial-meta-content
-// 			width: 100%
-// 			display: flex
-// 			flex-direction: column
-// 			align-items: flex-end
-// 			align-content: center
-// 			text-align: right
-// 			@include media-breakpoint-up(md)
-// 				flex-direction: row-reverse
-// 				align-items: center
-// 				align-content: center
-// 				text-align: right
-// 			img
-// 				width: 7rem
-// 				height: 7rem
-// 				border-radius: 100%
-// 				box-shadow: 0 0 30px -20px rgba(0,0,0,0.4)
-// 				margin-bottom: 1rem
-// 				@include media-breakpoint-up(md)
-// 					margin-bottom: 0
-// 					margin-left: 2rem
+.testimonial-single
+	display: flex
+	flex-direction: column
+	.testimonial-body
+		display: flex
+		position: relative
+		flex-direction: column
+		flex-grow: 1
+		@include media-breakpoint-up(md)
+			flex-direction: row
+		i.quote-icon
+			color: $color-brand
+			display: block
+			position: absolute
+			font-size: 16rem
+			display: block
+			top: -3rem
+			line-height: 1
+			position: absolute
+			opacity: 0.2
+			left: -5rem
+			line-height: 1
+			@include media-breakpoint-up(md)
+				font-size: 10rem
+				position: relative
+				opacity: 1
+				top: 0
+				left: 0
+		p.testimonial-text
+			font-size: 2rem
+			font-family: $font-serif
+			font-style: italic
+			padding-left: 2rem
+			padding-top: 4rem
+			margin-bottom: 1rem
+			@include media-breakpoint-up(md)
+				padding-top: 4rem
+				font-size: 2.2rem
+				padding-left: 0
+	.testimonial-meta
+		display: flex
+		justify-content: center
+		@include media-breakpoint-up(md)
+			justify-content: flex-end
+		.testimonial-meta-content
+			width: 100%
+			display: flex
+			flex-direction: column
+			align-items: flex-end
+			align-content: center
+			text-align: right
+			@include media-breakpoint-up(md)
+				flex-direction: row-reverse
+				align-items: center
+				align-content: center
+				text-align: right
+			img
+				width: 7rem
+				height: 7rem
+				border-radius: 100%
+				box-shadow: 0 0 30px -20px rgba(0,0,0,0.4)
+				margin-bottom: 1rem
+				@include media-breakpoint-up(md)
+					margin-bottom: 0
+					margin-left: 2rem
 
 
-// 			h4
-// 				font-size: 1.8rem
-// 				margin: 0
-// 			h5
-// 				font-size: 1.6rem
-// 				margin: 0
-// 				width: 300px
-// 				span
-// 					font-weight: normal
+			h4
+				font-size: 1.8rem
+				margin: 0
+			h5
+				font-size: 1.6rem
+				margin: 0
+				width: 300px
+				span
+					font-weight: normal
 
-// 	&:nth-child(even)
-// 		.testimonial-meta
-// 			@include media-breakpoint-up(md)
+	&:nth-child(even)
+		.testimonial-meta
+			@include media-breakpoint-up(md)
 
