--- a/sass/sections/benefits.sass
+++ b/sass/sections/benefits.sass
@@ -11,7 +11,10 @@ section.benefits
 			grid-auto-columns: 1fr
 			padding: 4rem 0 8rem 0
 			border-bottom: solid $color-white 1px
-			@include media-breakpoint-up(lg)
+			@include media-breakpoint-up(md)
+				grid-template-columns: 1fr 1fr
+				grid-column-gap: 2rem
+			@include media-breakpoint-up(xxl)
 				grid-template-columns: 1fr 1fr 1fr 1fr
 				grid-column-gap: 2rem
 
