--- a/sass/sections/case-study.sass
+++ b/sass/sections/case-study.sass
@@ -1,3 +1,63 @@
+section.case-study-home
+	.section-content
+		background-size: cover
+		background-position: 60% 50%
+		border-radius: 2rem
+		padding: 2rem
+		position: relative
+		overflow: hidden
+		z-index: 0
+		//filter: sepia(10%)
+		&:before
+			position: absolute
+			content: ""
+			top: 0
+			left: 0
+			right: 0
+			bottom: 0
+			//background-color: darken(rgba(237, 214, 187, 0.1), 10%)
+			box-shadow: inset 0 0 5rem -2rem rgba(0,0,0,0.3)
+
+		@include media-breakpoint-up(lg)
+			background-position: 50% 50%
+
+		.case-study-details
+			z-index: 999
+			position: relative
+			background-color: rgba(49, 130, 206, 0.8)
+			padding: 3rem
+			border-radius: 2rem
+			width: 100%
+			color: $color-white
+			margin-top: 300px
+			filter: none
+			@include media-breakpoint-up(md)
+				margin-top: 0
+				width: 60%
+			@include media-breakpoint-up(lg)
+				width: 42%
+				background-color: rgba(49, 130, 206, 1)
+			@include media-breakpoint-up(xl)
+				width: 36%
+
+			img
+				width: 100%
+				max-width: 80px
+				height: auto
+				margin-bottom: 5rem
+
+			h2
+				font-size: 2rem
+				margin-bottom: 2rem
+				text-shadow: 1px 2px 1px darken($color-blue-dark, 15%)
+
+			p
+				font-size: 1.6rem
+				text-shadow: 1px 1px 1px darken($color-blue-dark, 15%)
+				@include media-breakpoint-up(lg)
+					text-shadow: none
+
+
 section.case-study
 	.case-study-header
 		h5
