--- a/sass/sections/cta.sass
+++ b/sass/sections/cta.sass
@@ -1,32 +1,60 @@
 section.cta
-	background-color: $color-dark-gray
-	padding: 3rem 2rem
-	@include media-breakpoint-up(lg)
-		padding: 5rem 2rem
-	@include media-breakpoint-up(xl)
-		padding: 6rem 0
 
-	h2
-		color: $color-white
-		font-size: 2.8rem
-		font-weight: 400
-		line-height: 1.3
-		margin-bottom: 0
-		padding: 3rem 0
-		//text-shadow: 1px 1px 1px rgba(0,0,0,1)
-		.em
-			//background-color: $color-brand
-			//color: $color-white
-			//border-radius: 0.3rem
-
+	.section-content
+		display: flex
+		flex-direction: column-reverse
+		padding: 2rem
+		border-radius: 2rem
+		border: solid $color-medium-gray 1px
+		@include media-breakpoint-up(md)
+			display: grid
+			grid-template-columns: 2fr 1fr
 		@include media-breakpoint-up(lg)
-			font-size: 3rem
-			padding: 3rem 4rem 3rem 0
+			grid-template-columns: 1fr 1fr
+			padding: 2rem 4rem
+		.mailinglist-form, .mailinglist-image
+			display: flex
+			flex-direction: column
+			border-radius: 2rem
 
-	h3
-		font-weight: 300
-		color: $color-white
-		font-size: 2.4rem
+		
+		.mailinglist-form
+
+			h2
+				font-size: 2.4rem
+				line-height: 1.3
+				margin-bottom: 0
+				padding: 3rem 0
+
+			h3
+				font-size: 1.8rem
+				font-weight: normal
+
+			input
+				height: 4rem
+			.btn
+				height: 4rem
+				padding: 1rem
+				font-size: 1.5rem
+
+
+
+		.mailinglist-image
+			background-color: rgba(255, 110, 66, 0.1)
+			justify-content: center
+			align-content: center
+			align-items: center
+			padding: 3rem
+
+			img
+				width: 100%
+				max-width: 300px
+				height: auto
+
+
+	
+
+
 
 
 	.form-holder
