--- a/docs/styles/extra.css
+++ b/docs/styles/extra.css
@@ -155,3 +155,23 @@ h1 a:hover, h2 a:hover a, h3 a:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+/* https://github.com/squidfunk/mkdocs-material/issues/492#issuecomment-336640342 */
+
+.video-wrapper {
+	position: relative;
+	display: block;
+	height: 0;
+	padding: 0;
+	overflow: hidden;
+	padding-bottom: 56.25%;
+}
+.video-wrapper > iframe {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
