--- a/sass/common/buttons.sass
+++ b/sass/common/buttons.sass
@@ -30,5 +30,12 @@
 		color: #fff
 		&:hover, &:focus, &:active
 			background-color: #00c0f3
+	&.btn-hollow
+		background-color: transparent
+		border: solid #A0AEC0 1px
+		color: #3B3B3B
+		&:hover, &:focus, &:active
+			background-color: #A0AEC0
+			color: #fff
 	a
 		color: #fff
