--- a/sass/common/global.sass
+++ b/sass/common/global.sass
@@ -8,11 +8,16 @@ body
 	font-weight: normal
 	font-family: $font-body
 	line-height: 1.6
+	position: relative
+	min-height: 100vh
+	::selection
+		background-color: $color-brand
+		color: $color-white
 
 
 h1, h2, h3, h4, h5
 	font-family: $font-header
-	font-weight: 600
+	font-weight: 800
 h1
 	font-size: 4rem
 	margin-bottom: 2rem
