--- a/sass/config/variables.sass
+++ b/sass/config/variables.sass
@@ -1,10 +1,11 @@
 //fonts
 
 $font-brand: 'Montserrat', sans-serif
-$font-header: 'Rubik', sans-serif
-$font-body: 'Open Sans', sans-serif
-$font-serif: 'Lora', sans-serif
-$font-script: "Sriracha", cursive
+$font-header: 'Manrope', sans-serif
+$font-body: 'Manrope', sans-serif
+
+//$font-serif: 'Lora', sans-serif
+//$font-script: "Sriracha", cursive
 
 
 //colors
