--- a/sass/sections/testimonials.sass
+++ b/sass/sections/testimonials.sass
@@ -1,57 +1,3 @@
-section.testimonials-top
-	.section-content
-		display: grid
-		grid-template-columns: 1fr
-		grid-row-gap: 2rem
-
-
-		@include media-breakpoint-up(lg)
-			grid-template-columns: 1fr 1fr 1fr
-			grid-column-gap: 2rem
-
-
-		.testionial
-			display: flex
-			flex-direction: column
-			border: solid $color-light-gray 1px
-			border-radius: 2rem
-			padding: 3rem 1.5rem
-
-			.testimonial-header
-				h2
-					font-size: 1.8rem
-					font-style: italic
-			
-			.testimonial-body
-				display: flex
-				flex-direction: row
-
-				
-				.testimonial-image
-					margin-right: 2rem
-					img
-						width: 7rem
-						height: 7rem
-						border-radius: 100%
-						box-shadow: 0 0 30px -20px rgba(0,0,0,0.4)
-						margin-bottom: 1rem
-						@include media-breakpoint-up(md)
-
-
-				.testimonial-meta
-					h4
-						font-size: 1.5rem
-						font-weight: 400
-						margin-bottom: 0
-						span
-							font-weight: 700
-					h5
-						font-size: 1.4rem
-						color: $color-medium-gray
-						margin-bottom: 0
-
-
-
 section.testimonials
 	padding: 4rem 0 8rem 0 
 
@@ -63,60 +9,58 @@ section.testimonials
 				color: $color-brand
 
 	.testimonials-holder
-		display: flex
-		flex-direction: column
-		justify-content: center
+		display: grid
+		grid-template-columns: 1fr
+		grid-row-gap: 2rem
+		grid-column-gap: 2rem
 
+		@include media-breakpoint-up(md)
+			grid-template-columns: 1fr 1fr
 
 		@include media-breakpoint-up(lg)
-			flex-direction: row
-			flex-wrap: wrap
+			grid-template-columns: 1fr 1fr 1fr
 
 
-			.testimonial
-				background-color: #F8FAFC
-				border-radius: 1rem
+		.testimonial
+			background-color: #F8FAFC
+			border-radius: 1rem
+			padding: 2.5rem
+			display: flex
+			flex-direction: column-reverse
+			justify-content: start
+
+			.testimonial-body	
+				.testimonial-text
+					flex-grow: 1
+					padding-bottom: 2rem
+
+			.testimonial-meta
 				display: flex
-				flex-direction: column
-				margin-left: 1rem
-				margin-right: 1rem
-				width: 30%
-				padding: 1rem
+				flex-direction: row
 				justify-content: space-between
-				margin-bottom: 2rem
+				min-height: 11rem
 
-				.testimonial-body
-					.quote-icon
-						width: 35px
-						margin-bottom: 3rem
-						img
-							width: 100%
-							height: auto	
-					.testimonial-text
-						flex-grow: 1
-						padding-bottom: 2rem
 
-				.testimonial-meta
-					.testimonial-meta-content
-						display: flex
-						flex-direction: row
-						img
-							width: 7rem
-							height: 7rem
-							border-radius: 100%
-							box-shadow: 0 0 30px -20px rgba(0,0,0,0.4)
-							margin-bottom: 1rem
-							margin-right: 1rem
+				.testimonial-meta-content
+					display: flex
+					flex-direction: row
+					img
+						width: 7rem
+						height: 7rem
+						border-radius: 100%
+						box-shadow: 0 0 30px -20px rgba(0,0,0,0.4)
+						margin-bottom: 1rem
+						margin-right: 1rem
 
-						h4
-							font-size: 1.8rem
-							margin-bottom: 1rem
-						h5
-							color: $color-black
-							font-size: 1.4rem
-							span
-								display: block
-								color: $color-medium-gray
+					h4
+						font-size: 1.8rem
+						margin-bottom: 1rem
+					h5
+						color: $color-black
+						font-size: 1.4rem
+						span
+							display: block
+							color: $color-medium-gray
 
 
 
@@ -162,7 +106,6 @@ section.testimonials
 				left: 0
 		p.testimonial-text
 			font-size: 2rem
-			font-family: $font-serif
 			font-style: italic
 			padding-left: 2rem
 			padding-top: 4rem
